--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <html>
     <head>
-        Hackintosh is fun!
+        <title>
+            Hackintosh is fun!
+        </title>
     </head>
     <body>
         ummm. idk
