--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
         </title>
     </head>
     <body>
-        ummm. idk
-        TESTING
+        <h1>
+            Hackintosh is FUN!
+        </h1>
     </body>
 </html>
