--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <link href="style.css" type="text/css">
         <h1>
             Hackintosh is FUN!
         </h1>
