--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <link href="style.css" type="text/css">
+        <link href="style.css" type="text/css" rel="stylesheet">
         <h1>
             Hackintosh is FUN!
         </h1>
