--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     </head>
     <body>
         <link href="style.css" type="text/css" rel="stylesheet">
-        <h1>
-            Hackintosh is FUN!
-        </h1>
+        <header>    
+            <h1>
+                Hackintosh is FUN!
+            </h1>
+        </header>
     </body>
 </html>
