--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <link href="style.css" type="text/css" rel="stylesheet">
         <header>    
             <h1>
-                Hackintosh is FUN!
+                Vanilla Hackintosh Stuffs
             </h1>
         </header>
     </body>
