--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
     <head>
         <title>
-            Hackintosh is fun!
+            Vanilla Hackintosh
         </title>
     </head>
     <body>
