--- a/index.html
+++ b/index.html
@@ -10,6 +10,9 @@
             <h1>
                 Vanilla Hackintosh Stuffs
             </h1>
+            <a href="#">
+                Guides
+            </a>
         </header>
     </body>
 </html>
