--- a/index.html
+++ b/index.html
@@ -13,6 +13,12 @@
             <a href="#">
                 Guides
             </a>
+            <a href="#">
+                Downloads
+            </a>
+            <a href="#">
+                Communities
+            </a>
         </header>
     </body>
 </html>
