--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         </title>
     </head>
     <body>
+        <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,900&display=swap" rel="stylesheet">
         <link href="style.css" type="text/css" rel="stylesheet">
         <header>    
             <h1>
