--- a/index.html
+++ b/index.html
@@ -7,19 +7,26 @@
     <body>
         <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,900&display=swap" rel="stylesheet">
         <link href="style.css" type="text/css" rel="stylesheet">
-        <header>    
-            <h1>
-                Vanilla Hackintosh Stuffs
-            </h1>
-            <a href="#">
-                Guides
-            </a>
-            <a href="#">
-                Downloads
-            </a>
-            <a href="#">
-                Communities
-            </a>
-        </header>
+        <div class="head">
+            <header>    
+                <img src="logo.png">
+                <a href="#">
+                    Guides
+                </a>
+                <a href="#">
+                    Downloads
+                </a>
+                <a href="#">
+                    Communities
+                </a>
+            </header>
+        </div>
+        <div class="main">
+            <div id="intro">
+                <h1>
+                    What is this?
+                </h1>
+            </div>
+        </div>
     </body>
 </html>
