Updated index and style

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         </title>
     </head>
     <body>
-        <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:400,900&display=swap" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400,900&display=swap" rel="stylesheet">
         <link href="style.css" type="text/css" rel="stylesheet">
         <div class="head">
             <header>    
@@ -26,6 +26,29 @@
                 <h1>
                     What is this?
                 </h1>
+                <p>
+                    A site for Hackintosh stuffs. Including some useful scipts like gibMacOS, GenSMBIOS, etc.
+                </p>
+            </div>
+            <div class="selections">
+                <div id="guides">
+                    <h1>
+                        Guides
+                    </h1>
+                    <p>
+                        Useful guides for Hackintoshing. Including Install Guides and Post-Install Guides.
+                    </p>
+                </div>
+                <div id="downloads">
+                    <h1>
+                        Downloads
+                    </h1>
+                </div>
+                <div id="communities">
+                    <h1>
+                        Communities
+                    </h1>
+                </div>
             </div>
         </div>
     </body>
