--- a/index.html
+++ b/index.html
@@ -31,24 +31,30 @@
                 </p>
             </div>
             <div class="selections">
-                <div id="guides">
+                <a id="guides" href="#">
                     <h1>
                         Guides
                     </h1>
                     <p>
-                        Useful guides for Hackintoshing. Including Install Guides and Post-Install Guides.
+                        Guides for Hackintoshing. Including Install Guides and Post-Install Guides.
                     </p>
-                </div>
-                <div id="downloads">
+                </a>
+                <a id="downloads" href="#">
                     <h1>
                         Downloads
                     </h1>
-                </div>
-                <div id="communities">
+                    <p>
+                        Useful links for Hackintoshing. Including Kext Repo and useful scipts.
+                    </p>
+                </a>
+                <a id="communities" href="#">
                     <h1>
                         Communities
                     </h1>
-                </div>
+                    <p>
+                        Links to different Hackintosh Communities.
+                    </p>
+                </a>
             </div>
         </div>
     </body>
