--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     </head>
     <body>
         <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400,900&display=swap" rel="stylesheet">
-        <link href="style.css" type="text/css" rel="stylesheet">
+        <link href="indexstyle.css" type="text/css" rel="stylesheet">
         <div class="head">
             <header>    
                 <img src="logo.png">
