--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <html>
     <head>
         <title>
@@ -31,7 +32,7 @@
                 </p>
             </div>
             <div class="selections">
-                <a id="guides" href="#">
+                <a id="guides" href="guide.html">
                     <h1>
                         Guides
                     </h1>
