--- a/guide.html
+++ b/guide.html
@@ -4,23 +4,48 @@
         <title>
             Hackintosh Guides
         </title>
+        <meta charset="UTF-8">
     </head>
-    <body>
+    <body id="guidebody">
         <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400,900&display=swap" rel="stylesheet">
-        <link href="indexstyle.css" type="text/css" rel="stylesheet">
+        <link href="style.css" type="text/css" rel="stylesheet">
         <div class="head">
             <header>    
-                <img src="logo.png">
-                <a href="#">
+                <a href="index.html" id="logo">
+                    <img src="logo.png">
+                </a>
+                <a href="guide.html" class="nav">
                     Guides
                 </a>
-                <a href="#">
+                <a href="#" class="nav">
                     Downloads
                 </a>
-                <a href="#">
+                <a href="#" class="nav">
                     Communities
                 </a>
             </header>
+        </div>
+        <div class="main guides">
+            <h1 class="title">
+                Guides
+            </h1>
+            <div class="selections">
+                <a class="selguide" href="https://hackintosh.gitbook.io/-r-hackintosh-vanilla-desktop-guide/">
+                    <h2>
+                        Intel Vanilla Clover Hackintosh Guide
+                    </h2>
+                </a>
+                <a class="selguide" href="https://vanilla.amd-osx.com/">
+                    <h2>
+                        Official AMD Vanilla Clover Hackintosh Guide
+                    </h2>
+                </a>
+                <a class="selguide" href="https://kb.hackintoshisfun.ml/clover">
+                    <h2>
+                        Unofficial AMD Vanilla clover Hackintosh Guide
+                    </h2>
+                </a>
+            </div>
         </div>
     </body>
 </html>
