--- a/index.html
+++ b/index.html
@@ -2,22 +2,25 @@
 <html>
     <head>
         <title>
-            Vanilla Hackintosh
+            Vanilla Hackintosh Stuffs
         </title>
+        <meta charset="UTF-8">
     </head>
-    <body>
-        <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400,900&display=swap" rel="stylesheet">
-        <link href="indexstyle.css" type="text/css" rel="stylesheet">
+    <body id="indexbody">
+        <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400&display=swap" rel="stylesheet">
+        <link href="style.css" type="text/css" rel="stylesheet">
         <div class="head">
             <header>    
-                <img src="logo.png">
-                <a href="#">
+                <a href="index.html" id="logo">
+                    <img src="logo.png">
+                </a>
+                <a href="guide.html" class="nav">
                     Guides
                 </a>
-                <a href="#">
+                <a href="#" class="nav">
                     Downloads
                 </a>
-                <a href="#">
+                <a href="#" class="nav">
                     Communities
                 </a>
             </header>
