--- a/guide.html
+++ b/guide.html
@@ -11,7 +11,7 @@
         <link href="style.css" type="text/css" rel="stylesheet">
         <div class="head">
             <header>    
-                <a href="index.html" id="logo">
+                <a href="/" id="logo">
                     <img src="logo.png">
                 </a>
                 <a href="guide.html" class="nav">
