--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
             Vanilla Hackintosh Stuffs
         </title>
         <meta charset="UTF-8">
+        <meta property="og:title" content="Vanilla Hackintosh Stuffs">
+        <meta property="og:url" content="http://www.imdb.com/title/tt0117500/">
     </head>
     <body id="indexbody">
         <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400&display=swap" rel="stylesheet">
