--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
                 <a href="index.html" id="logo">
                     <img src="logo.png">
                 </a>
-                <a href="guide.html" class="nav">
-                    Guides
+                <a href="kb.html" class="nav">
+                    Knowledge Base
                 </a>
                 <a href="#" class="nav">
                     Downloads
@@ -39,7 +39,7 @@
             <div class="selections">
                 <a id="guides" href="guide.html">
                     <h1>
-                        Guides
+                        Knowledge Base
                     </h1>
                     <p>
                         Guides for Hackintoshing. Including Install Guides and Post-Install Guides.
