Finished Knowledge Base

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
             </div>
             <div class="selections">
-                <a id="guides" href="guide.html">
+                <a id="kb" href="kb.html">
                     <h1>
                         Knowledge Base
                     </h1>
