--- a/kb.html
+++ b/kb.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>
-            Vanilla Hackintosh Guides
+            Vanilla Hackintosh Knowledge Base
         </title>
         <meta charset="UTF-8">
     </head>
@@ -15,7 +15,7 @@
                     <img src="logo.png">
                 </a>
                 <a href="kb.html" class="nav">
-                    Guides
+                    Knowledge Base
                 </a>
                 <a href="#" class="nav">
                     Downloads
@@ -27,16 +27,16 @@
         </div>
         <div class="main guides">
             <h1 class="title">
-                Guides
+                Knowledge Base
             </h1>
             <h2 class="bar">
                 Install Guides
             </h2>
-            <div id="guidelist">
+            <div class="guidelist">
                 <div class="selections">
                     <a class="selguide" href="https://hackintosh.gitbook.io/-r-hackintosh-vanilla-desktop-guide/">
                         <h2>
-                            Intel Vanilla Clover Hackintosh Guide
+                            Intel Clocer Vanilla Hackintosh Guide
                         </h2>
                     </a>
                     <a class="selguide" href="https://internet-install.gitbook.io/macos-internet-install/">
@@ -46,19 +46,53 @@
                     </a>
                     <a class="selguide" href="https://vanilla.amd-osx.com/">
                         <h2>
-                            Official AMD Vanilla Clover Hackintosh Guide
+                            Official AMD Clover Vanilla Hackintosh Guide
                         </h2>
                     </a>
                 </div>
                 <div class="selections">
                     <a class="selguide" href="https://kb.hackintoshisfun.ml/clover">
                     <h2>
-                            Unofficial AMD Vanilla Clover Hackintosh Guide
+                            Unofficial AMD Clover Vanilla Hackintosh Guide
                         </h2>
                     </a>
                     <a class="selguide" href="https://khronokernel-2.gitbook.io/opencore-vanilla-desktop-guide/">
                         <h2>
-                            Intel and Ryzen Vanilla OpenCore Hackintosh Guide
+                            Intel and Ryzen OpenCore Vanilla Hackintosh Guide
+                        </h2>
+                    </a>
+                    <a class="selguide" href="https://hackintosh-multiboot.gitbook.io/hackintosh-multiboot/">
+                        <h2>
+                            Multi-booting Guide
+                        </h2>
+                    </a>
+                </div>
+            </div>
+            <h2 class="bar">
+                Post-Install Guides
+            </h2>
+            <div class="guidelist">
+                <div class="selections">
+                    <a class="selguide" href="https://usb-map.gitbook.io/project/">
+                        <h2>
+                            USB Mapping Guide for Intel
+                        </h2>
+                    </a>
+                    <a class="selguide" href="https://khronokernel-4.gitbook.io/disable-unsupported-gpus/">
+                        <h2>
+                            Spoof GPU Guide
+                        </h2>
+                    </a>
+                </div>
+                <div class="selections">
+                    <a class="selguide" href="https://kb.hackintoshisfun.ml/clover/post-installation/posty">
+                        <h2>
+                            Common Post-Installations Guide (Part of my AMD Guide)
+                        </h2>
+                    </a>
+                    <a class="selguide" href="https://amd-osx.com/kb/guides/adobe/">
+                        <h2>
+                            Adobe Fixes for AMD
                         </h2>
                     </a>
                 </div>
