Added Mobile Capabilities

--- a/kb.html
+++ b/kb.html
@@ -36,7 +36,7 @@
                 <div class="selections">
                     <a class="selguide" href="https://hackintosh.gitbook.io/-r-hackintosh-vanilla-desktop-guide/">
                         <h2>
-                            Intel Clocer Vanilla Hackintosh Guide
+                            Intel Clover Vanilla Hackintosh Guide
                         </h2>
                     </a>
                     <a class="selguide" href="https://internet-install.gitbook.io/macos-internet-install/">
