--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
         <meta charset="UTF-8">
         <meta property="og:title" content="Vanilla Hackintosh Stuffs">
         <meta property="og:url" content="http://www.imdb.com/title/tt0117500/">
+        <link rel="shortcut icon" href="/favicon.ico"/>
+        <link rel="bookmark" href="/favicon.ico"/>
     </head>
     <body id="indexbody">
         <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400&display=swap" rel="stylesheet">
@@ -45,22 +47,24 @@
                         Guides for Hackintoshing. Including Install Guides and Post-Install Guides.
                     </p>
                 </a>
-                <a id="downloads" href="#">
-                    <h1>
-                        Downloads
-                    </h1>
-                    <p>
-                        Useful links for Hackintoshing. Including Kext Repo and useful scipts.
-                    </p>
-                </a>
-                <a id="communities" href="#">
-                    <h1>
-                        Communities
-                    </h1>
-                    <p>
-                        Links to different Hackintosh Communities.
-                    </p>
-                </a>
+                <div id="dlandcommu">
+                    <a id="downloads" href="#">
+                        <h1>
+                            Downloads
+                        </h1>
+                        <p>
+                            Useful links for Hackintoshing. Including Kext Repo and useful scipts.
+                        </p>
+                    </a>
+                    <a id="communities" href="#">
+                        <h1>
+                            Communities
+                        </h1>
+                        <p>
+                            Links to different Hackintosh Communities.
+                        </p>
+                    </a>
+                </div>
             </div>
         </div>
     </body>
