--- a/kb.html
+++ b/kb.html
@@ -9,6 +9,8 @@
     <body id="guidebody">
         <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400,900&display=swap" rel="stylesheet">
         <link href="style.css" type="text/css" rel="stylesheet">
+        <link rel="shortcut icon" href="favicon.ico"/>
+        <link rel="bookmark" href="favicon.ico"/>
         <div class="head">
             <header>    
                 <a href="/" id="logo">
