--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
         <meta charset="UTF-8">
         <meta property="og:title" content="Vanilla Hackintosh Stuffs">
         <meta property="og:url" content="http://www.imdb.com/title/tt0117500/">
-        <link rel="shortcut icon" href="favicon.ico"/>
-        <link rel="bookmark" href="favicon.ico"/>
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="bookmark" type="image/x-icon" href="favicon.ico"/>
     </head>
     <body id="indexbody">
         <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400&display=swap" rel="stylesheet">
