--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <a href="kb.html" class="nav">
                     Knowledge Base
                 </a>
-                <a href="#" class="nav">
+                <a href="downloads.html" class="nav">
                     Downloads
                 </a>
                 <a href="#" class="nav">
