--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     </p>
                 </a>
                 <div id="dlandcommu">
-                    <a id="downloads" href="#">
+                    <a id="downloads" href="downloads.html">
                         <h1>
                             Downloads
                         </h1>
