--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="style.css" type="text/css" rel="stylesheet">
         <div class="head">
             <header>    
-                <a href="index.html" id="logo">
+                <a href="/" id="logo">
                     <img src="logo.png">
                 </a>
                 <a href="kb.html" class="nav">
