--- a/downloads.html
+++ b/downloads.html
@@ -29,5 +29,10 @@
                 </a>
             </header>
         </div>
+        <div class="main">
+            <h1 class="title">
+                Downloads
+            </h1>
+        </div>
     </body>
 </html>
