Finished downloads.html

--- a/downloads.html
+++ b/downloads.html
@@ -33,6 +33,55 @@
             <h1 class="title">
                 Downloads
             </h1>
+            <h2 class="bar">
+                Clover Files
+            </h2>
+            <div class="list">
+                <div class="selections">
+                    <a class="sel" href="http://kexts.goldfish64.com">
+                        <h2>
+                            Kexts Repo
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://cloverdb.com">
+                        <h2>
+                            Clover DB
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://sourceforge.net/projects/cloverefiboot/">
+                        <h2>
+                            Clover SourceForge
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://github.com/acidanthera/OpenCorePkg">
+                        <h2>
+                            OpenCorePkg
+                        </h2>
+                    </a>
+                </div>
+            </div>
+            <h2 class="bar">
+                Scripts
+            </h2>
+            <div class="list">
+                <div class="selections">
+                    <a class="sel" href="https://github.com/corpnewt/gibMacOS">
+                        <h2>
+                            gibMacOS
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://github.com/corpnewt/GenSMBIOS">
+                        <h2>
+                            GenSMBIOS
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://github.com/acidanthera/MacInfoPkg/releases">
+                        <h2>
+                            MacInfoPkg
+                        </h2>
+                    </a>
+                </div>
+            </div>
         </div>
     </body>
 </html>
