--- a/kb.html
+++ b/kb.html
@@ -27,43 +27,43 @@
                 </a>
             </header>
         </div>
-        <div class="main guides">
+        <div class="main">
             <h1 class="title">
                 Knowledge Base
             </h1>
             <h2 class="bar">
                 Install Guides
             </h2>
-            <div class="guidelist">
+            <div class="list">
                 <div class="selections">
-                    <a class="selguide" href="https://hackintosh.gitbook.io/-r-hackintosh-vanilla-desktop-guide/">
+                    <a class="sel" href="https://hackintosh.gitbook.io/-r-hackintosh-vanilla-desktop-guide/">
                         <h2>
                             Intel Clover Vanilla Hackintosh Guide
                         </h2>
                     </a>
-                    <a class="selguide" href="https://internet-install.gitbook.io/macos-internet-install/">
+                    <a class="sel" href="https://internet-install.gitbook.io/macos-internet-install/">
                         <h2>
                             Intel Clover Internet Install Hackintosh Guide
                         </h2>
                     </a>
-                    <a class="selguide" href="https://vanilla.amd-osx.com/">
+                    <a class="sel" href="https://vanilla.amd-osx.com/">
                         <h2>
                             Official AMD Clover Vanilla Hackintosh Guide
                         </h2>
                     </a>
                 </div>
                 <div class="selections">
-                    <a class="selguide" href="https://kb.hackintoshisfun.ml/clover">
+                    <a class="sel" href="https://kb.hackintoshisfun.ml/clover">
                     <h2>
                             Unofficial AMD Clover Vanilla Hackintosh Guide
                         </h2>
                     </a>
-                    <a class="selguide" href="https://khronokernel-2.gitbook.io/opencore-vanilla-desktop-guide/">
+                    <a class="sel" href="https://khronokernel-2.gitbook.io/opencore-vanilla-desktop-guide/">
                         <h2>
                             Intel and Ryzen OpenCore Vanilla Hackintosh Guide
                         </h2>
                     </a>
-                    <a class="selguide" href="https://hackintosh-multiboot.gitbook.io/hackintosh-multiboot/">
+                    <a class="sel" href="https://hackintosh-multiboot.gitbook.io/hackintosh-multiboot/">
                         <h2>
                             Multi-booting Guide
                         </h2>
@@ -75,24 +75,24 @@
             </h2>
             <div class="guidelist">
                 <div class="selections">
-                    <a class="selguide" href="https://usb-map.gitbook.io/project/">
+                    <a class="sel" href="https://usb-map.gitbook.io/project/">
                         <h2>
                             USB Mapping Guide for Intel
                         </h2>
                     </a>
-                    <a class="selguide" href="https://khronokernel-4.gitbook.io/disable-unsupported-gpus/">
+                    <a class="sel" href="https://khronokernel-4.gitbook.io/disable-unsupported-gpus/">
                         <h2>
                             Spoof GPU Guide
                         </h2>
                     </a>
                 </div>
                 <div class="selections">
-                    <a class="selguide" href="https://kb.hackintoshisfun.ml/clover/post-installation/posty">
+                    <a class="sel" href="https://kb.hackintoshisfun.ml/clover/post-installation/posty">
                         <h2>
                             Common Post-Installations Guide (Part of my AMD Guide)
                         </h2>
                     </a>
-                    <a class="selguide" href="https://amd-osx.com/kb/guides/adobe/">
+                    <a class="sel" href="https://amd-osx.com/kb/guides/adobe/">
                         <h2>
                             Adobe Fixes for AMD
                         </h2>
