--- a/downloads.html
+++ b/downloads.html
@@ -21,10 +21,10 @@
                 <a href="kb.html" class="nav">
                     Knowledge Base
                 </a>
-                <a href="downloads.html" class="nav">
+                <a href="#" class="nav">
                     Downloads
                 </a>
-                <a href="#" class="nav">
+                <a href="commu.html" class="nav">
                     Communities
                 </a>
             </header>
@@ -34,7 +34,7 @@
                 Downloads
             </h1>
             <h2 class="bar">
-                Clover Files
+                Install Files
             </h2>
             <div class="list">
                 <div class="selections">
@@ -53,9 +53,28 @@
                             Clover SourceForge
                         </h2>
                     </a>
+                </div>
+                <div class="selections">
                     <a class="sel" href="https://github.com/acidanthera/OpenCorePkg">
                         <h2>
                             OpenCorePkg
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://github.com/AMD-OSX/AMD_Vanilla">
+                        <h2>
+                            AMD Clover Kernel Patches
+                        </h2>
+                    </a>
+                </div>
+                <div class="selections">
+                    <a class="sel" href="https://cdn.discordapp.com/attachments/611462337446281236/615419791414525974/OC-patches-17h.plist">
+                        <h2>
+                            OpenCore Kernel Patches for Zen (High Sierra, Mojave, and Catalina Beta 6 Support)
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://cdn.discordapp.com/attachments/611462337446281236/615670204676178022/OC-patches-15_16h.plist">
+                        <h2>
+                            OpenCore Kernel Patches for 15H and 16H CPUs (High Sierra, Mojave, and Catalina Beta 6 Support)
                         </h2>
                     </a>
                 </div>
