--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <link href="style.css" type="text/css" rel="stylesheet">
         <div class="head">
             <header>    
-                <a href="/" id="logo">
+                <a href="#" id="logo">
                     <img src="logo.png">
                 </a>
                 <a href="kb.html" class="nav">
@@ -24,7 +24,7 @@
                 <a href="downloads.html" class="nav">
                     Downloads
                 </a>
-                <a href="#" class="nav">
+                <a href="commu.html" class="nav">
                     Communities
                 </a>
             </header>
@@ -56,7 +56,7 @@
                             Useful links for Hackintoshing. Including Kext Repo and useful scipts.
                         </p>
                     </a>
-                    <a id="communities" href="#">
+                    <a id="communities" href="commu.html">
                         <h1>
                             Communities
                         </h1>
