--- a/kb.html
+++ b/kb.html
@@ -16,13 +16,13 @@
                 <a href="/" id="logo">
                     <img src="logo.png">
                 </a>
-                <a href="kb.html" class="nav">
+                <a href="#" class="nav">
                     Knowledge Base
                 </a>
                 <a href="downloads.html" class="nav">
                     Downloads
                 </a>
-                <a href="#" class="nav">
+                <a href="commu.html" class="nav">
                     Communities
                 </a>
             </header>
