Added og:image meta tag

--- a/kb.html
+++ b/kb.html
@@ -5,6 +5,10 @@
             Vanilla Hackintosh Knowledge Base
         </title>
         <meta charset="UTF-8">
+        <meta property="og:title" content="Vanilla Hackintosh Stuffs">
+        <meta property="og:image" content="applelogo.png" />
+        <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
+        <link rel="bookmark" type="image/x-icon" href="favicon.ico"/>
     </head>
     <body id="guidebody">
         <link href="https://fonts.googleapis.com/css?family=Red+Hat+Display:200,400,900&display=swap" rel="stylesheet">
