--- a/downloads.html
+++ b/downloads.html
@@ -6,7 +6,7 @@
         </title>
         <meta charset="UTF-8">
         <meta property="og:title" content="Vanilla Hackintosh Stuffs">
-        <meta property="og:image" content="applelogo.png" />
+        <meta property="og:image" content="https://hackintoshisfun.ml/applelogo.png" />
         <link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
         <link rel="bookmark" type="image/x-icon" href="favicon.ico"/>
     </head>
