--- a/commu.html
+++ b/commu.html
@@ -62,9 +62,9 @@
                             InsanelyMac Forum
                         </h2>
                     </a>
-                    <a class="sel" href="https://insanelyhack.com/">
+                    <a class="sel" href="https://pcbeta.com/">
                         <h2>
-                            InsanelyHack Forum
+                            Chinese Hackintosh Forum (Currently maintaining)
                         </h2>
                     </a>
                     <a class="sel" href="https://www.tonymacx86.com/">
