--- a/commu.html
+++ b/commu.html
@@ -62,14 +62,26 @@
                             InsanelyMac Forum
                         </h2>
                     </a>
-                    <a class="sel" href="https://pcbeta.com/">
-                        <h2>
-                            Chinese Hackintosh Forum (Currently maintaining)
-                        </h2>
-                    </a>
                     <a class="sel" href="https://www.tonymacx86.com/">
                         <h2>
                             tonymacx86 Forum
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://www.macos86.it/">
+                        <h2>
+                            Italian Hackintosh Forum (macOS86)
+                        </h2>
+                    </a>
+                    <a class="sel" href="https://applelife.ru/">
+                        <h2>
+                            Russian Hackinotsh Forum (AppleLife)
+                        </h2>
+                    </a>
+                </div>
+                <div class="selections">
+                    <a class="sel" href="https://pcbeta.com/">
+                        <h2>
+                            Chinese Hackintosh Forum (遠景論壇, currently maintaining)
                         </h2>
                     </a>
                 </div>
