--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
       auto2top: true,
       logo: '/.gitbook/assets/logo.png',
       subMaxLevel: 1,
+      relativePath: true
     }
   </script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
