--- a/index.html
+++ b/index.html
@@ -28,5 +28,6 @@
   <script src="//unpkg.com/docsify/lib/plugins/matomo.min.js"></script>
   <script src="//unpkg.com/docsify-gifcontrol/dist/docsify-gifcontrol.js"></script>
   <script src="https://unpkg.com/docsify-copy-code@2"></script>
+  <script src="https://cdn.jsdelivr.net/npm/docsify-themeable@0"></script>
 </body>
 </html>
