--- a/index.html
+++ b/index.html
@@ -4,11 +4,48 @@
   <meta charset="UTF-8">
   <title>Vanilla AMD Hackintosh Guide</title>
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
-  <meta name="description" content="Guide for installing macOS on AMD Platforms">
+  <meta name="description" content="Guide for installing macOS on AMD Platforms" />
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0" />
   <link rel="stylesheet" href="//unpkg.com/docsify-gifcontrol/dist/docsify-gifcontrol.css" />
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple-dark.css" />
-
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/docsify-themeable@0/dist/css/theme-simple.css" />
+  <style>
+      :root {
+          --base-font-size: 18px;
+          --theme-hue: 180;
+          --base-background-color: #333;
+          --base-color: #eee;
+          --strong-color: #eee;
+          --sidebar-background: #444;
+          --hr-border: 1px solid #444;
+          --code-theme-background: #222;
+          --code-theme-text: #eee;
+          --code-theme-tag: #0cf;
+          --code-inline-background: #444;
+          --heading-color: #eee;
+          --heading-h1-border-color: #444;
+          --heading-h2-border-color: #444;
+          --heading-h3-border-color: #444;
+          --heading-h4-border-color: #444;
+          --heading-h1-font-weight: 600;
+          --notice-tip-background: #222;
+          --notice-important-background: #222;
+          --blockquote-background: #222;
+          --sidebar-toggle-background: #555;
+          --sidebar-toggle-icon-color: #aaa;
+          --sidebar-width: 25rem;
+          --sidebar-padding: 0 50px 0 100px;
+          --pagination-border-top: 1px solid #aaa;
+          --table-cell-border-color: #444;
+          --table-row-odd-background: #222;
+          --search-input-background-color: #222;
+          --search-input-border-color: #222;
+          --search-input-color: #eee;
+          --search-input-placeholder-color: #aaa;
+          --search-clear-icon-color1: #aaa;
+          --search-clear-icon-color2: #222;
+          --search-input-background-image: url("data:image/svg+xml,%3Csvg height='20px' width='20px' viewBox='0 0 24 24' fill='none' stroke='rgba(255, 255, 255, 0.3)' stroke-width='1.5' stroke-linecap='round' stroke-linejoin='round' preserveAspectRatio='xMidYMid meet' xmlns='http://www.w3.org/2000/svg'%3E%3Ccircle cx='10.5' cy='10.5' r='7.5' vector-effect='non-scaling-stroke'%3E%3C/circle%3E%3Cline x1='21' y1='21' x2='15.8' y2='15.8' vector-effect='non-scaling-stroke'%3E%3C/line%3E%3C/svg%3E");
+      }
+      </style>
 </head>
 <body>
   <div id="app"></div>
@@ -20,9 +57,13 @@
       auto2top: true,
       logo: '/.gitbook/assets/logo.png',
       subMaxLevel: 1,
-      relativePath: true
+      relativePath: true,
+      pagination: {
+          crossChapter: true,
+      }
     }
   </script>
+  <script src="//unpkg.com/docsify-pagination/dist/docsify-pagination.min.js"></script>
   <script src="//unpkg.com/docsify/lib/docsify.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/search.min.js"></script>
   <script src="//unpkg.com/docsify/lib/plugins/matomo.min.js"></script>
