--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
           --sidebar-toggle-background: #555;
           --sidebar-toggle-icon-color: #aaa;
           --sidebar-width: 25rem;
-          --sidebar-padding: 0 50px 0 100px;
+          --sidebar-padding: 0 50px;
           --pagination-border-top: 1px solid #aaa;
           --table-cell-border-color: #444;
           --table-row-odd-background: #222;
