--- a/index.html
+++ b/index.html
@@ -61,9 +61,9 @@
       pagination: {
           crossChapter: true,
       },
-      plugins: {
+      plugins: [
           EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/tree/guide')
-      }
+      ]
     }
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
