--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
           crossChapter: true,
       },
       plugins: [
-          EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/tree/guide')
-      ]
+          EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/tree/guide'),
+      ],
     }
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
