--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
           crossChapter: true,
       },
       plugins: [
-          EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/tree/guide'),
+          EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/blob/guide/'),
       ],
     }
   </script>
