--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
       subMaxLevel: 1,
       relativePath: true,
       pagination: {
-          crossChapter: true,
+          crossChapter: true
       },
       plugins: [
           EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/blob/guide/'),
