--- a/index.html
+++ b/index.html
@@ -55,14 +55,14 @@
       repo: '',
       loadSidebar: true,
       auto2top: true,
-      logo: '/.gitbook/assets/logo.png',
+      logo: '/_images/logo.png',
       subMaxLevel: 1,
       relativePath: true,
       pagination: {
           crossChapter: true
       },
       plugins: [
-          EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/blob/guide/'),
+          EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/blob/guide/')
       ],
     }
   </script>
