--- a/index.html
+++ b/index.html
@@ -59,11 +59,8 @@
       subMaxLevel: 1,
       relativePath: true,
       pagination: {
-          crossChapter: true
-      },
-      plugins: [
-          EditOnGithubPlugin.create('https://github.com/doesprintfwork/hackintoshisfun.ml/blob/guide/')
-      ],
+          crossChapter: true,
+      }
     }
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
