--- a/index.html
+++ b/index.html
@@ -60,7 +60,12 @@
       relativePath: true,
       pagination: {
           crossChapter: true,
-      }
+      },
+      plugins: [
+          EditOnGithubPlugin.create(
+              'https://github.com/doesprintfwork/hackintoshisfun.ml/tree/guide/'
+          )
+      ]
     }
   </script>
   <!-- Global site tag (gtag.js) - Google Analytics -->
